--- a/m2_prework/m2.lecture.html
+++ b/m2_prework/m2.lecture.html
@@ -76,7 +76,7 @@
 
 
     <!-- Local jQuery JS file-->
-    <script src="../js/jquery-3.2.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     <!-- CDN Link to Bootstrap JS file -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
